--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -16,6 +18,14 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!node_modules/",
+      "!src/index.js",
+      "!src/serviceWorker.js"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -28,11 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint": "5.3.0",
-    "eslint-config-airbnb": "17.1.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2"
-  }
+  "devDependencies": {}
 }
