--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "src/**/*.{js,jsx}",
       "!node_modules/",
       "!src/index.js",
-      "!src/serviceWorker.js"
+      "!src/setUpTests.js"
     ]
   },
   "browserslist": {
