--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -33,11 +33,10 @@ jobs:
         wait-on: http://localhost:3000
 
 
-    - name: Setup Code Climate test-reporter
-      run: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
-
+    # - name: Setup Code Climate test-reporter
+    #   run: |
+    #         curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    #         chmod +x ./cc-test-reporter
 
     
     - name: Install dependencies
@@ -45,17 +44,17 @@ jobs:
       working-directory: src
 
 
-
-    - name: Run the tests and generate coverage report
-      run: |
-            ./cc-test-reporter before-build
-            yarn test ./src --coverage
-      working-directory: src
+    # - name: Run the tests and generate coverage report
+    #   run: |
+    #         ./cc-test-reporter before-build
+    #         yarn test ./src --coverage
+    #   working-directory: src
 
 
     - name: Build
       run: yarn run build
       working-directory: src
+
 
     - name: Print Success Message for CD finish
       run : echo "CD Pipeline part Finished successfully!"
