--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: CDLP FrontEnd CI
 
 on:
@@ -29,14 +26,14 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
         wait-on: http://localhost:3000
 
 
-    # - name: Setup Code Climate test-reporter
-    #   run: |
-    #         curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    #         chmod +x ./cc-test-reporter
+    - name: Setup Code Climate test-reporter
+      run: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
 
     
     - name: Install dependencies
@@ -44,11 +41,11 @@ jobs:
       working-directory: src
 
 
-    # - name: Run the tests and generate coverage report
-    #   run: |
-    #         ./cc-test-reporter before-build
-    #         yarn test ./src --coverage
-    #   working-directory: src
+    - name: Run the tests and generate coverage report
+      run: |
+            ./cc-test-reporter before-build
+            yarn test ./src --coverage
+      working-directory: src
 
 
     - name: Build
