--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -23,11 +23,9 @@ jobs:
 
 
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-        wait-on: http://localhost:3000
+      
+      uses: c-hive/gha-yarn-cache@v2
+      
 
 
     - name: Setup Code Climate test-reporter
