--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
       - run:
           name: Setup Dependencies
-          command: yarn install
+          command: yarn installs
       - run:
           name: Setup Code Climate test-reporter
           command: |
